--- a/QtMyWps.ui
+++ b/QtMyWps.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>591</width>
-    <height>468</height>
+    <width>804</width>
+    <height>593</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -56,7 +56,7 @@
           </item>
           <item>
            <property name="text">
-            <string>项目符号(□)</string>
+            <string>项目符号(■)</string>
            </property>
           </item>
           <item>
@@ -87,7 +87,11 @@
          </widget>
         </item>
         <item>
-         <widget class="QFontComboBox" name="fontComboBox"/>
+         <widget class="QFontComboBox" name="fontComboBox">
+          <property name="editable">
+           <bool>false</bool>
+          </property>
+         </widget>
         </item>
         <item>
          <widget class="QComboBox" name="fontSizeComboBox"/>
@@ -106,8 +110,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>591</width>
-     <height>26</height>
+     <width>804</width>
+     <height>30</height>
     </rect>
    </property>
    <widget class="QMenu" name="FileMenu">
@@ -395,6 +399,15 @@
    </property>
   </action>
   <action name="colorAction">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>false</bool>
+   </property>
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="icon">
     <iconset resource="QtMyWps.qrc">
      <normaloff>:/images/color.ico</normaloff>:/images/color.ico</iconset>
